<?xml version="1.0"?>
<package format="3">
  <name>cras_topic_tools</name>
  <version>3.0.0</version>
  <description>Nodes and components for safe and efficient manipulation with topics</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_topic_tools</url>
  <url type="bugtracker">https://github.com/ctu-vras/ros-utils/issues</url>
  <url type="repository">https://github.com/ctu-vras/ros-utils</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>

  <depend>cras_cpp_common</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!--build_depend>cras_msgs</build_depend-->  <!-- temporarily disabled for release -->
  <build_depend>libcxxopts-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>topic_tools</build_depend>

  <!--exec_depend>cras_msgs</exec_depend-->  <!-- temporarily disabled for release -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <!--test_depend>geometry_msgs</test_depend-->
  <!--test_depend>roslaunch</test_depend-->
  <test_depend>cras_lint</test_depend>
  <!--test_depend>rostopic</test_depend-->
  <!--test_depend>std_msgs</test_depend-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
