<?xml version="1.0"?>
<package format="3">
  <name>image_transport_codecs</name>
  <version>2.2.0</version>
  <description>Image transport plugins available as C, C++ and Python libraries</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/image_transport_codecs</url>
  <url type="bugtracker">https://github.com/ctu-vras/ros-utils/issues</url>
  <url type="repository">https://github.com/ctu-vras/ros-utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>class_loader</depend>
  <depend>cras_cpp_common</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>
  
  <build_depend>compressed_depth_image_transport</build_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>cras_topic_tools</build_depend>
  <build_depend>libturbojpeg</build_depend>
  <build_depend>theora_image_transport</build_depend>
  
  <exec_depend>compressed_depth_image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>cras_topic_tools</exec_depend>
  <exec_depend>libturbojpeg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-enum34</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>
  
  <test_depend>rosbag</test_depend>
  <test_depend>roslint</test_depend>

  <doc_depend>cras_docs_common</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <image_transport_codecs plugin="${prefix}/codecs.xml" />
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
